Fixed spinner jumping on data load

--- a/client/styles/_document.scss
+++ b/client/styles/_document.scss
@@ -72,7 +72,6 @@ a {
 }
 
 .md-spinner-container {
-  margin-top: $navbar-height * 2;
   position: absolute;
   top: 0; bottom: 0;
   left: 0; right: 0;
